# clean_arch_django

./: .gitignore  DTO_GATEWAY_ARCHITECTURE.md  DTO_GATEWAY_ARCHITECTURE_FA.md  DTO_GATEWAY_IMPLEMENTATION_STATUS.md  Dockerfile  ENTITY_DRIVEN_MODELS-EN.md  ENTITY_DRIVEN_MODELS_FA.md  FINAL_PROJECT_STRUCTURE.md  FINAL_PROJECT_STRUCTURE_FA.md  FINAL_STATUS_REPORT.md  MIGRATION_SUMMARY.md  MIGRATION_SUMMARY_FA.md  README-EN.md  README-FA.md  README-en.md  README-fa.md  README.md  docker-compose.yml  final_verification_test.py  test_dto_gateway.py
project/: asgi.py  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
project/apps/profile/: admin.py  models.py  tests.py
project/apps/profile/domain/: dtos.py  entities.py  repositories.py
project/apps/profile/infrastructure/: admin_generator.py  django_device_repository.py  django_repositories_with_gateway.py  django_user_repository.py  gateways.py  model_generator.py  repositories.py
project/apps/profile/interfaces/: serializers.py  views.py
project/apps/profile/use_cases/: device_service.py  user_service.py  (+1 more)
project/clean_arch_project/: asgi.py  schema.py  settings.py  urls.py  wsgi.py
project/profile_app/: admin.py  model_registry.py  tests.py
project/profile_app/domain/: repositories.py
project/profile_app/infrastructure/: django_device_repository.py  django_user_repository.py  entity_mapper.py  model_generator.py
project/profile_app/interfaces/: authentication.py  serializers.py  urls.py
project/profile_app/use_cases/: device_service.py  device_service_base.py  user_service.py  user_service_base.py
(+1 files in other folders)
